<resources>
    <string name="app_name">Quiz</string>
    <string name="start_title">１０問クイズ</string>
    <string name="start_btn">スタート</string>
    <string name="test_text">def</string>
    <string name="result_title">結果発表</string>
    <string name="time">かかった時間</string>
    <string name="second">秒</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_btn">決定</string>
    <string name="next_btn">次へ</string>
</resources>